# WalktheLines2

./: .gitignore  LICENSE  README.md  binarize.py  convert_imdb.ipynb  pyproject.toml  requirements.txt  test.ipynb  train.ipynb  wtl2.ipynb  wtl2.py
examples/: example.ipynb
wtl2/: __init__.py  nms.py  tracer_net.py  utils.py  wtl2.py
